# plate-spinner

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  dist-workspace.toml  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
ci/: README.md  release.sh
discovery/: FINDINGS.md  hook-env-dump.sh
docs/: claude-code-events.md
docs/desired-features/: esc-deselects-row.md  event-inbox.md  migrations-system.md  notifications.md  running-state-recovery.md  settings-and-keybinds.md  tmux-integration-and-event-inbox.md
docs/plans/: 2025-01-20-plate-spinner-design.md  2025-01-20-plate-spinner-implementation.md  2026-01-21-notification-sounds-design.md  2026-01-21-notification-sounds-impl.md  2026-01-22-rust-rewrite-design.md  2026-01-22-rust-rewrite-impl.md  2026-01-22-tmux-integration-design.md  2026-01-22-tmux-integration-impl.md
plugin/: plugin.json
plugin/hooks/: hooks.json
plugin/scripts/: post-tool-use.sh  pre-tool-use.sh  session-start.sh  stop.sh
scripts/: install-hooks.sh
src/: config.rs  db.rs  lib.rs  main.rs  models.rs  recovery.rs  state_machine.rs
src/cli/: auth.rs  config.rs  install.rs  kill.rs  mod.rs  plates.rs  run.rs  sessions.rs  tmux.rs
src/daemon/: handlers.rs  health_check.rs  mod.rs  state.rs  summarizer.rs  websocket.rs
src/hook/: mod.rs  prompt_submit.rs  session_start.rs  stop.rs  tool_use.rs
src/plate_spinner/: cli.py  config.py  hooks.py
src/plate_spinner/daemon/: app.py  db.py  models.py  (+1 more)
src/tui/: app.rs  mod.rs  state.rs  ui.rs
tests/: test_app.py  test_cli.py  test_config.py  test_db.py  test_integration.py  test_models.py  test_summarizer.py
tests/docker/: Dockerfile  docker-compose.yml  run-tests.sh  test_e2e.sh
(+1 files in other folders)
