[package]
name = "plate-spinner"
version = "0.1.6"
edition = "2021"
description = "A CLI tool for spinning plates"
repository = "https://github.com/nishu-builder/plate-spinner"
license = "MIT"

[[bin]]
name = "sp"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["ws"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
ratatui = "0.29"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"], default-features = false }
libc = "0.2"
rodio = "0.19"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
futures-util = "0.3"
tokio-tungstenite = "0.24"
shell-words = "1.1.1"

[dev-dependencies]
proptest = "1"

[lints.clippy]
all = "deny"

[profile.release]
lto = true
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
