[project]
name = "plate-spinner"
version = "0.1.0"
description = "Dashboard for managing multiple Claude Code sessions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "textual>=0.89.0",
    "httpx>=0.28.0",
    "websockets>=14.0",
    "anthropic>=0.40.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
sp = "plate_spinner.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
